optimize lua script class